# llm-programming-setup

./: .gitignore  CLAUDE.md  LICENSE  README.md  fastmcp_server.py  pyproject.toml
demo/: sample-output.md
demo/sample-project/: main.py
demo/sample-project/tests/: test_main.py
docs/: claude-code-integration.md  demo-workspace-tutorial.md
docs/examples/: claude_desktop_config.json.example
example-project/: .gitignore  config.py  requirements.txt
rules/: goto.yaml  naming-mappings.yaml  projects.yaml  repository-standards.md  update_projects.py  user-preferences.yaml
rules/coding-standards/: README.md  c-cpp.md  csharp-dotnet.md  flutter-dart.md  general-principles.md  javascript-typescript.md  python.md
rules/ide-standards/: vs-code.md
src/llm_programming_setup_mcp/: __init__.py  server.py  utils.py
src/llm_programming_setup_mcp/templates/: __init__.py
src/llm_programming_setup_mcp/tools/: __init__.py  context_generator.py  project_scanner.py  template_processor.py  token_optimizer.py
