[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-programming-setup-mcp"
version = "0.1.0"
description = "MCP server for LLM-agnostic programming setup and context optimization"
authors = [
    {name = "LLM Programming Setup", email = "noreply@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pathlib",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/user/llm-programming-setup"
Repository = "https://github.com/user/llm-programming-setup"
Issues = "https://github.com/user/llm-programming-setup/issues"

[project.scripts]
llm-setup-mcp = "llm_programming_setup_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_programming_setup_mcp"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true